# wcm_cv

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
cv_data/: A_personal.json  B_education.json  C_postdoc.json  D_positions.json  E_employment.json  F_licensure.json  G_affiliation.json  H_honors.json  I_organizations.json  J_percent_effort.json  K_teaching.json  L_clinical.json  M_research.json  N_mentoring.json  O_leadership.json  P_admin.json  Q_extramural.json  R_lectures.json  meta.json  refs.bib
examples/: cv-repo-workflow.yml
src/cvkit/: __init__.py  cli.py  compile.py  generate.py
tests/: conftest.py  test_cli.py  test_compile.py  test_generate.py
