[project]
name = "cvkit"
version = "0.1.0"
description = "Generate a Weill Cornell Medicine faculty CV (XeLaTeX) from JSON + BibTeX data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aleksei Tiulpin" }]
keywords = ["cv", "curriculum-vitae", "latex", "xelatex", "wcm", "academic"]
# Pure-Python: no runtime dependencies. It shells out to xelatex/bibtex, which
# must be available on PATH (TeX Live / MacTeX).
dependencies = []

[project.scripts]
compile_cv = "cvkit.cli:main"

[project.urls]
Homepage = "https://github.com/lext/wcm-cv"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvkit"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: end-to-end tests that invoke xelatex/bibtex (skipped if absent)",
]
